[tool.poetry]
name = "m87k452b"
version = "0.1.0"
description = "HTML for M87K452b gh-pages"
authors = ["Harivinay V"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
